Added name, introductionand image to portfolio

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <div id="content">
-      <h1>My Portfolio</h1>
+      <h1>Michael Lawes's Portfolio</h1>
       <p>This is my portfolio.</p>
+      <p>Michael is a 19 year old student at Columbia University studying Computer Science in SEAS.</p>
+      <img src="/images/Mikoto_Prop.png" />
       <p>Click <a href="/hello">here</a> to see content created by server code.</p>
       <p>Click here to get a random message:</p>
       <button onclick="addRandomGreeting()">Hello</button>
