Added paragraph explaining background

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -12,6 +12,8 @@
       <p>This is my portfolio.</p>
       <p>Michael is a 19 year old student at Columbia University studying Computer Science in SEAS.</p>
       <img src="/images/Mikoto_Prop.png" />
+      <p>Above is an image of my favorite character of all time, Mikoto Suoh. He is one of the antihero's in the anime series Project K.</p>
+      <p>I grew in New York, more specifically Long Island. I always enjoyed math and science growing up and originally pursued research upon starting high school. My high school went from 7th to 12th in one building so I joined Science Research in 8th grade. Upon entering my senior year I decided I wanted to study CS as I realized research was not where my heart resided. Now I'm here </p>
       <p>Click <a href="/hello">here</a> to see content created by server code.</p>
       <p>Click here to get a random message:</p>
       <button onclick="addRandomGreeting()">Hello</button>
