Added list of projects, link to LinkedIn and Github, and image gallery

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -15,6 +15,18 @@
       <p>Above is an image of my favorite character of all time, Mikoto Suoh. He is one of the antihero's in the anime series Project K.</p>
       <p>I grew in New York, more specifically Long Island. I always enjoyed math and science growing up and originally pursued research upon starting high school. My high school went from 7th to 12th in one building so I joined Science Research in 8th grade. Upon entering my senior year I decided I wanted to study CS as I realized research was not where my heart resided. Now I'm here </p>
       <p>Click <a href="/hello">here</a> to see content created by server code.</p>
+      <ul>Projects:
+	      <li>Real-time chat application using MERN web development stack</li>
+	      <li>Data Science 4 All project on select variables impacting graduation rate at 4-year colleges and universities</li>
+      </ul>
+      <ul>Professional Links:
+	      <li><a href="https://www.linkedin.com/in/michael-lawes-443a1918b/">LinkedIn</a></li>
+	      <li><a href="https://github.com/michaellawes">GitHub</a></li>
+      </ul>
+      <h2>Photo Gallery</h2>
+      <img src="/images/birthmark-Recovered.png" />
+      <img src="/images/wold howling.jpg" />
+      <img src="/wp5517466.jpg" />
       <p>Click here to get a random message:</p>
       <button onclick="addRandomGreeting()">Hello</button>
       <div id="greeting-container"></div>
