Fixed img filename error, added paragraph about photography and ending text

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -24,12 +24,14 @@
 	      <li><a href="https://github.com/michaellawes">GitHub</a></li>
       </ul>
       <h2>Photo Gallery</h2>
-      <img src="/images/birthmark-Recovered.png" />
-      <img src="/images/wold howling.jpg" />
-      <img src="/wp5517466.jpg" />
-      <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
+      <img src="/images/birthmark-Recovered.png" width="200" height="200" alt="Jojo Edit" />
+      <img src="/images/wolf howling.jpg" width="200" height="200" alt="Wolf howling"/>
+      <img src="/wp5517466.jpg" width="200" height="200" alt ="Naruto wallpaper"/>
+      <p>I don't usually take photographs often. If I am taking a picture it's likely of either the clouds or the sky when it's orange or purple-ish. I do enjoy photoshoots of different outfits I put together, however, I never have time to take pictures or someone available who can photos :(. Maybe one day I'll learn how to use the self-timer and get a front-facing camera that doesn't have the quality of a 2007 Youtube video.</p>
+      <p>Click here to get a random quote or Fact:</p>
+      <button onclick="addRandomGreeting()">Output Fact/Quote</button>
       <div id="greeting-container"></div>
+      <p>Congratulations you made it to the end of my portfolio :) I'd say it looks pretty good for someone with 4 midterms this week, 3 of them being on Thursday.</p>
     </div>
   </body>
 </html>
