--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -33,10 +33,10 @@
       <div id="greeting-container"></div>
       <p>Congratulations you made it to the end of my portfolio :) I'd say it looks pretty good for someone with 4 midterms this week, 3 of them being on Thursday.</p>
       <p>Week-2 Button</p>
-      <button onclick="showWeek2();">
+      <button onclick="showWeek2()">
 	      Get Text
       </button>
-      <p id="week-2-container"></p>
+      <p id="fetch-container"></p>
     </div>
   </body>
 </html>
