--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -38,5 +38,12 @@
       </button>
       <p id="fetch-container"></p>
     </div>
+
+    <form method="POST">
+      <p>Enter some text here:</p>
+        <textarea name="text-input">hello world</textarea>
+	  <br/>
+	    <input type="submit" />
+    </form>
   </body>
 </html>
