--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -39,7 +39,7 @@
       <p id="fetch-container"></p>
     </div>
 
-    <form method="POST">
+    <form action="/form-handler" method="POST">
       <p>Enter some text here:</p>
         <textarea name="text-input">hello world</textarea>
 	  <br/>
