--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -41,8 +41,13 @@
 
     <form action="/form-handler" method="POST">
       <p>Enter some text here:</p>
-        <textarea name="text-input">hello world</textarea>
+        <textarea name="name">Name</textarea>
 	  <br/>
+	<textarea name="email">Email</textarea>
+	  <br/>
+	<textarea name="subject">Subject</textarea>
+	  <br/>
+	<textarea name="text">...</textarea>
 	    <input type="submit" />
     </form>
   </body>
