Add link to datastore results page and create datastore results html file

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -50,5 +50,6 @@
 	<textarea name="text">...</textarea>
 	    <input type="submit" />
     </form>
+    <p><a href="/pages/dstore_results.html" target="_self">DataStore Results Section</a></p>
   </body>
 </html>
