Add datastore form results list to dstore_results.html

--- a/portfolio/src/main/webapp/pages/dstore_results.html
+++ b/portfolio/src/main/webapp/pages/dstore_results.html
@@ -5,10 +5,15 @@
     <meta charset="UTF-8">
     <title>Datastore Results</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
   </head>
-  <body>
+  <body onload="loadResponse()">
     <div id="content">
       <h1>Datastore Results</h1>
+      <div>
+	<h2>Form Responses</h2>
+        <ul id="form-responses"></ul>
+      </div>
+    </div>
   </body>
 </html>
