Fix syntax errors in variable names and function calls

--- a/portfolio/src/main/webapp/pages/dstore_results.html
+++ b/portfolio/src/main/webapp/pages/dstore_results.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="UTF-8">
     <title>Datastore Results</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <script src="../script.js"></script>
   </head>
-  <body onload="loadResponse()">
+  <body onload="loadFormResponses()">
     <div id="content">
       <h1>Datastore Results</h1>
       <div>
